// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Column can be flex 1`] = `
<div
  className="css-1dh5pml"
>
  <div
    className="css-1ewmkw0"
  >
    <div
      className="css-10185dy"
      justify="flex-start"
    >
      <div
        className="css-98u3d9"
        flex={true}
        s="var(--grid-colcount)"
        suppressHydrationWarning={true}
      >
        1
      </div>
    </div>
  </div>
</div>
`;

exports[`Column can be hidden 1`] = `
<div
  className="css-1dh5pml"
>
  <div
    className="css-1ewmkw0"
  >
    <div
      className="css-10185dy"
      justify="flex-start"
    >
      <div
        className="css-d0exl2"
        s={0}
        suppressHydrationWarning={true}
      >
        1
      </div>
    </div>
  </div>
</div>
`;

exports[`Column can be raw 1`] = `
<div
  className="css-1dh5pml"
>
  <div
    className="css-1ewmkw0"
  >
    <div
      className="css-10185dy"
      justify="flex-start"
    >
      <div
        className="css-7pp4ub"
        raw={true}
        s="var(--grid-colcount)"
        suppressHydrationWarning={true}
      >
        1
      </div>
    </div>
  </div>
</div>
`;

exports[`Column can have colspan 1`] = `
<div
  className="css-1dh5pml"
>
  <div
    className="css-1ewmkw0"
  >
    <div
      className="css-10185dy"
      justify="flex-start"
    >
      <div
        className="css-1eghgw8"
        l={3}
        m={2}
        s={1}
        suppressHydrationWarning={true}
      >
        1
      </div>
    </div>
  </div>
</div>
`;

exports[`Column have order 1`] = `
<div
  className="css-1dh5pml"
>
  <div
    className="css-1ewmkw0"
  >
    <div
      className="css-10185dy"
      justify="flex-start"
    >
      <div
        className="css-1oacmb5"
        order={-1}
        s="var(--grid-colcount)"
        suppressHydrationWarning={true}
      >
        1
      </div>
    </div>
  </div>
</div>
`;
